Resolves: tdf#91057 transliterateChar2Char throws MultipleCharsOutputException

for ß, but toTitle only allows RuntimeException, which is our usual
awesomeness

Change-Id: Ib5618a55a369fa5cd1d323f657f0798776828386